# restic-service

./: .gitignore  Cargo.toml  Makefile.toml  README.md  service_config.toml
.github/workflows/: build.yaml
docs/: cli-backup.md  cli-forget.md  example.toml  service_config.toml
restic-sdk/: Cargo.toml
restic-sdk/src/: arg_builder.rs  builder.rs  client.rs  config.rs  errors.rs  lib.rs
restic-sdk/src/commands/: backup.rs  cat.rs  exec.rs  exec_json.rs  forget.rs  get_version.rs  init.rs  mod.rs  unlock.rs  version.rs
restic-sdk/src/extensions/: enum_union.rs  errors.rs  mod.rs
restic-sdk/src/messages/: exit_error.rs  mod.rs  version.rs
restic-sdk/src/messages/backup/: backup_error.rs  backup_status.rs  backup_summary.rs  mod.rs
restic-sdk/src/parsing/: errors.rs  mod.rs  parser.rs
restic-sdk/tests/: command_backup.rs  command_init.rs  commands.rs
restic-sdk/tests/common/: mod.rs  virtual_repository.rs
service/: Cargo.toml
service/src/: cli.rs  host.rs  main.rs  management.rs  paths.rs  service.rs  service_host.rs
service/src/api/: endpoints.http  errors.rs  mod.rs  server.rs  state.rs
service/src/api/endpoints/: health.rs  jobs.rs  mod.rs
service/src/config/: manager.rs  mod.rs  structs.rs
service/src/host/: job.rs  mod.rs  run.rs
service/src/jobs/: backup_job.rs  clear_locks.rs  forget_job.rs  job_manager.rs  job_runner.rs  mod.rs
service/wix/: License.rtf  main.wxs  service_config.toml
src/common/: Cargo.toml
src/common/src/config/: manager.rs  mod.rs  parser.rs  structs.rs  watcher.rs
src/installer/: main.wxs
src/monitor/: .gitignore  Cargo.toml  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
src/monitor/capabilities/: default.json
src/monitor/src/: lib.rs  main.rs  tray_icon.rs  windows.rs
src/monitor/ui/: main.tsx  styles.css
src/monitor/ui/api/: jobs.ts
src/monitor/ui/components/: App.tsx
src/monitor/ui/components/frame/: Button.tsx  Chrome.tsx  Pane.tsx
src/monitor/ui/components/status/: StatusWindow.tsx
src/monitor/ui/components/status/jobs/: Job.tsx  Jobs.tsx
src/restic-sdk/: Cargo.toml
src/restic-sdk/src/: arg_builder.rs  config.rs  errors.rs  lib.rs  parsing.rs
src/restic-sdk/src/commands/: backup.rs  cat.rs  exec.rs  forget.rs  list_locks.rs  mod.rs
src/restic-sdk/src/extensions/: enum_union.rs  errors.rs  mod.rs  stop_process.rs  vec.rs
src/restic-sdk/src/messages/: helpers.rs  init.rs  mod.rs  restic_message.rs
src/restic-sdk/src/messages/backup/: backup_summary.rs  backup_verbose_status.rs  message.rs
src/restic-sdk/tests/: command_forget.rs  command_version.rs
src/service/: Cargo.toml
src/service/src/: host.rs  main.rs  management.rs
src/service/src/api/: endpoints.http  http-client.env.json  mod.rs  server.rs
src/service/src/api/endpoints/: health.rs  jobs.rs
src/service/src/jobs/: backup_job.rs  clear_locks.rs  forget_job.rs  job_manager.rs  job_runner.rs  mod.rs
