[workspace]
resolver = "3"
members = [ "src/common","src/monitor", "src/restic-sdk", "src/service"]

[workspace.package]
version = "0.0.0"
authors = ["Silvenga"]
repository = "https://github.com/Silvenga/restic-service"
license = "MIT"
edition = "2024"
publish = false

[workspace.dependencies]
tokio = "1.47.1"
