[package]
name = "restic-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "process", "io-util"] }
log = "0.4"
