[package]
name = "restic-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "process", "io-util"] }
log = "0.4.27"
pathsearch = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "process", "io-util", "rt"] }
uuid = { version = "1.17.0", features = ["v4"] }
colog = "1.3.0"
ctor = "0.4.2"
