[package]
name = "service"
description = "The actual Windows service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "restic-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util"] }
windows-service = "0.8"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
thiserror = "2.0"
restic-sdk = { path = "../restic-sdk" }
