[package]
name = "service"
description = "The actual Windows service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "restic-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util"] }
windows-service = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
restic-sdk = { path = "../restic-sdk" }
toml = "0.8.23"
serde = "1.0.219"
serde-inline-default = "0.2.3"
async-cron-scheduler = "2.0.1"