[package]
name = "service"
description = "The actual Windows service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "restic-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util", "fs", "time"] }
tokio-util = "0.7.15"
windows-service = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
restic-sdk = { path = "../restic-sdk" }
toml = "0.8.23"
serde = "1.0.219"
serde-inline-default = "0.2.3"
async-cron-scheduler = "2.0.1"
notify-debouncer-full = "0.5.0"
env_logger = "0.11.8"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
chrono = "0.4.41"
ctrlc = { version = "3.4.7", features = ["termination"] }
sysinfo = "0.35.2"
