[package]
name = "common"
description = "Common code between monitor and service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7.15"
log = "0.4.27"
thiserror = "2.0.12"
toml = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
notify-debouncer-full = { version = "0.6.0", default-features = false }
chrono = "0.4.41"
