[package]
name = "monitor"
description = "The user-land monitor/tray application for the service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "restic-monitor"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util", "fs", "time"] }
tokio-util = "0.7.15"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
toml = "0.9.1"
serde = "1.0.219"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
chrono = "0.4.41"
flexi_logger = "0.31.2"
actix-web = "4.11.0"
