[package]
name = "monitor"
description = "The user-land monitor/tray application for the service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "restic_montior_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util", "fs", "time"] }
tokio-util = "0.7.15"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
toml = "0.9.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
chrono = "0.4.41"
flexi_logger = "0.31.2"
actix-web = "4.11.0"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
