[package]
name = "monitor"
description = "The user-land monitor/tray application for the service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "restic_montior_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
log = "0.4.27"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
