[package]
name = "service"
description = "The actual Windows service."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "process", "io-util", "fs", "time"] }
tokio-util = "0.7.15"
windows-service = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
restic-sdk = { path = "../restic-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
async-cron-scheduler = "2.0.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
chrono = "0.4.41"
ctrlc = { version = "3.4.7", features = ["termination"] }
sysinfo = { version = "0.37.0", default-features = false, features = ["disk"] }
flexi_logger = "0.31.2"
actix-web = "4.11.0"
actix-cors = "0.7.1"
